[gd_scene load_steps=4 format=3 uid="uid://dv4mhaj5kwmvi"]

[ext_resource type="PackedScene" uid="uid://cbx6uy7f7qfbd" path="res://scenes/profile.tscn" id="1_3mx0q"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_h08f6"]
[ext_resource type="PackedScene" uid="uid://bawoqudyi00f2" path="res://scenes/mod.tscn" id="2_s4iwr"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_h08f6")
mod_scene = ExtResource("2_s4iwr")
profile_scene = ExtResource("1_3mx0q")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="LeftBar" type="VBoxContainer" parent="Background/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="NameBox" type="LineEdit" parent="Background/HBoxContainer/LeftBar"]
unique_name_in_owner = true
layout_mode = 2

[node name="ProfilesScroller" type="ScrollContainer" parent="Background/HBoxContainer/LeftBar"]
layout_mode = 2
size_flags_vertical = 3

[node name="Profiles" type="VBoxContainer" parent="Background/HBoxContainer/LeftBar/ProfilesScroller"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Delete" type="Button" parent="Background/HBoxContainer/LeftBar"]
layout_mode = 2
text = "Delete Profile"

[node name="PathBox" type="LineEdit" parent="Background/HBoxContainer/LeftBar"]
unique_name_in_owner = true
layout_mode = 2

[node name="Launch" type="Button" parent="Background/HBoxContainer/LeftBar"]
layout_mode = 2
text = "Launch"

[node name="ScrollContainer" type="ScrollContainer" parent="Background/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="Mods" type="VBoxContainer" parent="Background/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[connection signal="text_submitted" from="Background/HBoxContainer/LeftBar/NameBox" to="." method="_on_name_box_text_submitted"]
[connection signal="pressed" from="Background/HBoxContainer/LeftBar/Delete" to="." method="_on_delete_pressed"]
[connection signal="text_submitted" from="Background/HBoxContainer/LeftBar/PathBox" to="." method="_on_path_box_text_submitted"]
[connection signal="pressed" from="Background/HBoxContainer/LeftBar/Launch" to="." method="_on_launch_pressed"]
